# Astra

./: CONTRIBUTING-RU.md  CONTRIBUTING.md  CUSTOM_LICENSE-RU.md  CUSTOM_LICENSE.md  Getting-Started.md  Home-RU.md  LICENSE  Language-Specification-RU.md  README-RU.md  README.md  ROADMAP-RU.md  ROADMAP.md  SECURITY-RU.md  SECURITY.md  build.sh  build_interpreter.sh  build_windows.sh  build_windows_minimal.sh  index.html  install.sh  package.sh  test.astra  test.sh  windows-toolchain.cmake
.github/workflows/: pages.yml
compiler/: CMakeLists.txt  CMakeLists_minimal.txt  README.md
compiler/build_windows/: CMakeCache.txt  Makefile  cmake_install.cmake
compiler/build_windows_minimal/: CMakeCache.txt  CMakeLists.txt
compiler/src/: main.cpp  main_minimal.cpp
compiler/src/ast/: ast.cpp  ast.h  ast_minimal.cpp
compiler/src/codegen/: generator.h  llvm_generator.cpp  llvm_generator.h  llvm_generator_minimal.cpp
compiler/src/ir/: generator.cpp  generator.h  generator_minimal.cpp
compiler/src/lexer/: lexer.cpp  lexer.h  lexer_minimal.cpp  token.h
compiler/src/optimizer/: optimizer.cpp  optimizer.h  optimizer_minimal.cpp
compiler/src/parser/: parser.cpp  parser.h  parser_minimal.cpp
compiler/src/semantic/: analyzer.cpp  analyzer.h  analyzer_minimal.cpp
compiler/src/utils/: error_handler.cpp  error_handler.h  error_handler_minimal.cpp  error_handler_minimal.h  options.cpp  options.h  options_minimal.cpp  options_minimal.h
compiler/src/vm/: vm.cpp  vm.h
compiler/tests/: CMakeLists.txt  ast_test.cpp  codegen_test.cpp  destructors_test.cpp  error_handler_test.cpp  ir_test.cpp  lexer_test.cpp  optimizer_test.cpp  parser_test.cpp  semantic_test.cpp
docs/: _config.yml  advanced_features.md  compiler_architecture.md  development_roadmap.md  getting_started.md  hardware_integration.md  index.md  integration_guide.md  language_specification.md  performance_optimization.md  safety_features.md  safety_verification.md  standard_library.md
docs/_layouts/: default.html
docs/ru/: index.md
drivers/hardware/arm/: barometer_ms5611.asm  gps_ublox.asm  gyroscope_mpu6050.asm  motor_controller.asm
examples/: apollo11_advanced_mission.astra  apollo11_mission.astra  apollo11_mission_extended.astra  drone_control.astra  drone_mission.astra  network_test.astra  orbit_adjustment.astra  quaternion_test.astra  rocket_control.astra  spacecraft_control.astra  test.astra  vector_test.astra
hardware/arduino/: arduino_hal.h
hardware/common/: hal.h  hal_factory.cpp
hardware/esp32/: esp32_hal.h
hardware/raspberry_pi/: raspberry_pi_hal.h
hardware/stm32/: stm32_hal.h
interpreter/: CMakeLists.txt  README.md
interpreter/src/: main.cpp
interpreter/src/runtime/: runtime.cpp  runtime.h
interpreter/src/stdlib/: control_module.h  math_module.cpp  math_module.h  matrix_module.h  navigation_module.h  network_module.cpp  network_module.h  orbital_module.h  quaternion_module.h  sensors_module.h  signal_module.h  stdlib.cpp  stdlib.h  time_module.h  vector_module.cpp  vector_module.h
interpreter/src/stdlib/network_module/: network_module.cpp  network_module.h
interpreter/src/vm/: value.h  value_operators.h  vm.cpp  vm.h
interpreter/tests/: CMakeLists.txt  runtime_test.cpp  stdlib_test.cpp  vm_test.cpp
tools/firmware_manager/: firmware_manager.astra
tools/playground/: index.html  server.py  start_playground.sh
tools/profiler/: profiler.astra
tools/safety_analyzer/: safety_analyzer.astra
wiki/: Getting-Started-RU.md  Getting-Started.md  Home.md  Language-Specification-RU.md  Language-Specification.md
